# Mestrado-Codigos-Geant4

./: CMakeLists.txt  README.md  mpd.cc  mpdAnalysis.hh  mpdDetectorConstruction.cc  mpdEventAction.cc  mpdPrimaryGeneratorAction.cc  mpdRunAction.hh  plotNtuple.C  readspec.C  run1.mac  run2.mac  run_test.mac  spec-muon.csv  spec-proton.csv  vis.mac
MPD/: CMakeLists.txt  DiffMuonFlux-Grieder-Figure3.35.txt  GNUmakefile  IntMuonFlux-Grieder-Figure3.35.txt  PionFlux-Grieder-Figure3.10.txt  mpd.cc  plotHisto.C  readspecCSV.C  readspecPion.C  readspecPionGrieder.C  spec-neutron.csv  spec-pion.csv  vis.mac  visperf.mac
MPD-build/: CMakeCache.txt  G4History.macro  Makefile  Rodadas  cmake_install.cmake  init_vis.mac  mpd  mpd.in  mpd.root  mpd_16.root  plotNtuple.C  run_test.mac  vis.mac
MPD-build/Arquivos-Root/: mpd_0.root  mpd_09-10  mpd_1.root  mpd_10.root  mpd_11.root  mpd_12.root  mpd_13.root  mpd_14.root  mpd_15.root  mpd_2.root  mpd_3.root  mpd_4.root  mpd_5.root  mpd_6.root  mpd_7.root  mpd_8.root  mpd_9.root  mpd_inicio.root
MPD/include/: mpdCalorimeterSD.hh  mpdPMTSD.hh  mpdPrimaryGeneratorAction.hh.bkp  mpdRunAction.hh  mpdTreeManager.hh
MPD/src/: mpdCalorimeterSD.cc  mpdCalorimeterSD.cc.bkp.31082021  mpdDetectorConstruction.cc  mpdDetectorConstruction.cc.bkp16022021  mpdDetectorConstruction.cc.bkp23082021  mpdDigitizer.cc  mpdDigitizer.cc.bkp23082021  mpdEventAction.cc  mpdPMTHit.cc  mpdPMTSD.cc  mpdPrimaryGeneratorAction.cc  mpdTreeManager.cc
include/: mpdActionInitialization.hh  mpdCalorHit.hh  mpdCalorimeterSD.hh  mpdDetectorConstruction.hh  mpdDigi.hh  mpdDigitizer.hh  mpdEventAction.hh  mpdEventAction.hh.bkp2  mpdPMTHit.hh  mpdPrimaryGeneratorAction.hh  mpdTreeManager.hh
src/: mpdActionInitialization.cc  mpdCalorHit.cc  mpdCalorimeterSD.cc  mpdDetectorConstruction.cc  mpdDigi.cc  mpdDigitizer.cc  mpdEventAction.cc  mpdEventAction.cc.bkp15062021  mpdEventAction.cc.bkp31082021  mpdPMTSD.cc  mpdPMTSD.cc.bkp23082021  mpdPrimaryGeneratorAction.cc  mpdPrimaryGeneratorAction.cc.bkp14062021  mpdRunAction.cc  mpdTreeManager.cc
